# torch2theano

./: Cargo.toml  README.md
example/dcgan/: main.py
example/dcgan_theano/: Cargo.toml
example/dcgan_theano/src/: main.rs
src/: analyzer.rs  codegen.rs  converter.rs  main.rs  report.rs  transforms.rs
